Completed README. All-in-one ready for testing